student verify,dispute short term job logic